# olist-data-platform

./: .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.md  task.md
.github/workflows/: ci.yml
dbt_project/: .user.yml  dbt_project.yml  profiles.yml  selectors.yml
dbt_project/macros/: cents_to_currency.sql  safe_divide.sql
dbt_project/models/features/: _fct_predictions.yml  _features__models.yml  fct_order_features.sql  fct_predictions.sql
dbt_project/models/marts/: _marts__models.yml  dim_customers.sql  dim_products.sql  dim_sellers.sql  fact_order_items.sql  fact_orders.sql
dbt_project/models/metrics/: _metrics__models.yml  met_daily_delay_rate.sql  met_daily_gmv.sql  met_daily_revenue.sql
dbt_project/models/sources/: _ml__sources.yml
dbt_project/models/staging/: stg_orders.sql  (+9 more)
dbt_project/tests/: assert_met_daily_delay_rate_bounds.sql  assert_met_daily_gmv_matches_valid_orders.sql  assert_met_daily_revenue_matches_delivered.sql  assert_ml_predictions_rowcount_equals_features_parquet.sql  assert_no_future_orders.sql  assert_no_leakage_in_features.sql  assert_prediction_probabilities_in_unit_interval.sql
docs/: definitions.md  metrics.md  ml_design.md  runbook.md
ml/: config.yaml  current_model.yaml  evaluate.py  feature_config.py  monitor.py  predict.py  retrain.py  train.py
ml/reports/: drift_2026-04-12.md  evaluation_v1.md
scripts/: download_data.sh  export_features.py  load_raw_data.py  run_pipeline.sh  setup_env.sh  setup_github.sh
