[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "olist-data-platform"
version = "0.1.0"
description = "End-to-end data platform: raw e-commerce data -> reliable metrics -> monitored delivery-delay predictions"
requires-python = ">=3.10"
license = "MIT"

dependencies = [
    "dbt-duckdb>=1.7,<2.0",
    "duckdb>=0.10,<2.0",
    "scikit-learn>=1.4,<2.0",
    "pandas>=2.2,<3.0",
    "pyarrow>=15.0,<20.0",
    "pyyaml>=6.0,<7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pre-commit>=3.6,<5.0",
]

[tool.setuptools]
py-modules = []
packages = []
